force-app/main/default/objects/ServiceAppointment/fields/Adresse_e_mail__c.field-meta.xml
<CustomField>
    <fullName>Adresse_e_mail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Adresse e-mail</label>
    <type>Email</type>
</CustomField>