force-app/main/default/objects/ServiceAppointment/fields/AMCGP1__AMC_Actual_Difference_Mins__c.field-meta.xml
<CustomField>
    <fullName>AMCGP1__AMC_Actual_Difference_Mins__c</fullName>
    <description>It is used in Assessment reports</description>
    <formula>ROUND((( AMCGP1__AMC_Actual_Duration_Mins__c ) - (Duration*60)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Difference (Mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>