force-app/main/default/objects/ServiceAppointment/fields/AMCGP1__AMC_Actual_Duration_Mins__c.field-meta.xml
<CustomField>
    <fullName>AMCGP1__AMC_Actual_Duration_Mins__c</fullName>
    <description>It is used in Assessment Reports</description>
    <formula>ROUND((( SchedEndTime - SchedStartTime )*1440),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Duration (Mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>