force-app/main/default/objects/ServiceAppointment/fields/AMCGP1__AMC_Actual_vs_Planned_Duration__c.field-meta.xml
<CustomField>
    <fullName>AMCGP1__AMC_Actual_vs_Planned_Duration__c</fullName>
    <description>It is used in assessment Reports</description>
    <formula>IF( AMCGP1__AMC_Difference_considering_Buffer_Mins__c = 0, &apos;Same as Planned&apos;, IF( AMCGP1__AMC_Difference_considering_Buffer_Mins__c &gt; 0, &apos;Longer than Planned&apos;,&apos;Shorter than Planned&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual vs Planned Duration</label>
    <type>Text</type>
</CustomField>