force-app/main/default/objects/ServiceAppointment/fields/AMCGP1__AMC_Appointment__c.field-meta.xml
<CustomField>
    <fullName>AMCGP1__AMC_Appointment__c</fullName>
    <formula>!ISBLANK( ArrivalWindowStartTime )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment</label>
    <type>Checkbox</type>
</CustomField>