force-app/main/default/objects/ServiceAppointment/fields/AMCGP1__AMC_Appointments_SLA__c.field-meta.xml
<CustomField>
    <fullName>AMCGP1__AMC_Appointments_SLA__c</fullName>
    <description>It is used in Assessment Reports</description>
    <formula>IF (  AMCGP1__AMC_Sch_Start_and_Arr_End_Diff_Mins__c  &gt; 0, &apos;Missed SLA&apos;, &apos;Within SLA&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointments SLA</label>
    <type>Text</type>
</CustomField>