force-app/main/default/objects/ServiceAppointment/fields/AMCGP1__AMC_Completion_Efficiency__c.field-meta.xml
<CustomField>
    <fullName>AMCGP1__AMC_Completion_Efficiency__c</fullName>
    <description>Completion efficiency coefficient</description>
    <formula>IF(ActualDuration = 0, 0, Duration /  ActualDuration)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Completion efficiency coefficient</inlineHelpText>
    <label>Completion Efficiency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>