force-app/main/default/objects/ServiceAppointment/fields/AMCGP1__AMC_Difference_considering_Buffer_Mins__c.field-meta.xml
<CustomField>
    <fullName>AMCGP1__AMC_Difference_considering_Buffer_Mins__c</fullName>
    <description>It is used in Assessment Reports</description>
    <formula>IF(ABS( AMCGP1__AMC_Actual_Difference_Mins__c ) &gt; (Duration*0.1 * 60),( AMCGP1__AMC_Actual_Difference_Mins__c ),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference considering Buffer (Mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>