force-app/main/default/objects/ServiceAppointment/fields/AMCGP1__AMC_Long_Lat_Concatenate__c.field-meta.xml
<CustomField>
    <fullName>AMCGP1__AMC_Long_Lat_Concatenate__c</fullName>
    <description>Concatenates Latitude and Longitude fields for same site reporting</description>
    <formula>TEXT( Latitude ) &amp;  TEXT( Longitude )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Long Lat Concatenate</label>
    <type>Text</type>
</CustomField>