force-app/main/default/objects/ServiceAppointment/fields/AMCGP1__AMC_Non_Appointments_SLA__c.field-meta.xml
<CustomField>
    <fullName>AMCGP1__AMC_Non_Appointments_SLA__c</fullName>
    <description>It is used in Assessment Reports</description>
    <formula>IF (AMCGP1__AMC_Schedule_and_Due_date_Difference__c &gt; 15, &apos;Missed SLA&apos;, &apos;Within SLA&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Appointments SLA</label>
    <type>Text</type>
</CustomField>