force-app/main/default/objects/ServiceAppointment/fields/AMCGP1__AMC_Optimizable__c.field-meta.xml
<CustomField>
    <fullName>AMCGP1__AMC_Optimizable__c</fullName>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Optimizable</label>
    <type>Checkbox</type>
</CustomField>