force-app/main/default/objects/ServiceAppointment/fields/AMCGP1__AMC_Planned_vs_Actual_Duration__c.field-meta.xml
<CustomField>
    <fullName>AMCGP1__AMC_Planned_vs_Actual_Duration__c</fullName>
    <formula>IF(ActualDuration &gt; 1, ABS(ActualDuration -  Duration), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned vs Actual Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>