force-app/main/default/objects/ServiceAppointment/fields/AMCGP1__AMC_SA_Reporting_Count__c.field-meta.xml
<CustomField>
    <fullName>AMCGP1__AMC_SA_Reporting_Count__c</fullName>
    <description>Power of one</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SA Reporting Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>