force-app/main/default/objects/ServiceAppointment/fields/AMCGP1__AMC_Sch_Start_and_Arr_End_Diff_Mins__c.field-meta.xml
<CustomField>
    <fullName>AMCGP1__AMC_Sch_Start_and_Arr_End_Diff_Mins__c</fullName>
    <description>It is used in Assessment Reports</description>
    <formula>ROUND(((SchedStartTime - ArrivalWindowEndTime)*1440),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sched Start and Arrival End Diff (Mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>