force-app/main/default/objects/ServiceAppointment/fields/AMCGP1__AMC_Schedule_and_Due_date_Difference__c.field-meta.xml
<CustomField>
    <fullName>AMCGP1__AMC_Schedule_and_Due_date_Difference__c</fullName>
    <description>It is used in Assessment reports</description>
    <formula>ROUND(((SchedEndTime - DueDate)*1440),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sch End and Due Date Diff (Mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>