force-app/main/default/objects/ServiceAppointment/fields/Commentaires__c.field-meta.xml
<CustomField>
    <fullName>Commentaires__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Commentaires</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>