force-app/main/default/objects/ServiceAppointment/fields/Commune__c.field-meta.xml
<CustomField>
    <fullName>Commune__c</fullName>
    <formula>Account.ShippingCity</formula>
    <label>Commune</label>
    <type>Text</type>
</CustomField>