force-app/main/default/objects/ServiceAppointment/fields/Date_intervention__c.field-meta.xml
<CustomField>
    <fullName>Date_intervention__c</fullName>
    <formula>DATEVALUE(SchedStartTime )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date intervention</label>
    <type>Date</type>
</CustomField>