force-app/main/default/objects/ServiceAppointment/fields/Departement__c.field-meta.xml
<CustomField>
    <fullName>Departement__c</fullName>
    <formula>Account.Departement__c</formula>
    <label>Département</label>
    <type>Text</type>
</CustomField>