force-app/main/default/objects/ServiceAppointment/fields/Distance_Parcourue__c.field-meta.xml
<CustomField>
    <fullName>Distance_Parcourue__c</fullName>
    <label>Distance Parcourue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>