force-app/main/default/objects/ServiceAppointment/fields/Duration_rdv__c.field-meta.xml
<CustomField>
    <fullName>Duration_rdv__c</fullName>
    <formula>Intervention__r.Duration_action__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>