force-app/main/default/objects/ServiceAppointment/fields/Echeance_depassee__c.field-meta.xml
<CustomField>
    <fullName>Echeance_depassee__c</fullName>
    <formula>IF(
				DueDate &lt; NOW(),
				true,
				false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Échéance dépassée</label>
    <type>Checkbox</type>
</CustomField>