force-app/main/default/objects/ServiceAppointment/fields/Faux_RDV__c.field-meta.xml
<CustomField>
    <fullName>Faux_RDV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Faux RDV</label>
    <type>Checkbox</type>
</CustomField>