force-app/main/default/objects/ServiceAppointment/fields/Foyer_paneliste__c.field-meta.xml
<CustomField>
    <fullName>Foyer_paneliste__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Foyer panéliste</label>
    <referenceTo>Foyer_paneliste__c</referenceTo>
    <relationshipLabel>Rendez-vous de service</relationshipLabel>
    <relationshipName>Rendez_vous_de_service</relationshipName>
    <type>Lookup</type>
</CustomField>