force-app/main/default/objects/ServiceAppointment/fields/HeureDebut__c.field-meta.xml
<CustomField>
    <fullName>HeureDebut__c</fullName>
    <formula>LEFT(TEXT(TIMEVALUE(SchedStartTime)), 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HeureDebut</label>
    <type>Text</type>
</CustomField>