force-app/main/default/objects/ServiceAppointment/fields/HeureFin__c.field-meta.xml
<CustomField>
    <fullName>HeureFin__c</fullName>
    <formula>LEFT(TEXT(TIMEVALUE( SchedEndTime)), 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HeureFin</label>
    <type>Text</type>
</CustomField>