force-app/main/default/objects/ServiceAppointment/fields/Intervention__c.field-meta.xml
<CustomField>
    <fullName>Intervention__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intervention</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>