force-app/main/default/objects/ServiceAppointment/fields/Lieu__c.field-meta.xml
<CustomField>
    <fullName>Lieu__c</fullName>
    <formula>Account.ShippingPostalCode + &quot; &quot; + Account.ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lieu</label>
    <type>Text</type>
</CustomField>