force-app/main/default/objects/ServiceAppointment/fields/mail__c.field-meta.xml
<CustomField>
    <fullName>mail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>tech_mail_foyer</label>
    <type>Email</type>
</CustomField>