force-app/main/default/objects/ServiceAppointment/fields/Mail_de_la_station_externe__c.field-meta.xml
<CustomField>
    <fullName>Mail_de_la_station_externe__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mail de la station externe</label>
    <type>Email</type>
</CustomField>