force-app/main/default/objects/ServiceAppointment/fields/MAIL_heure_debut_planifie__c.field-meta.xml
<CustomField>
    <fullName>MAIL_heure_debut_planifie__c</fullName>
    <formula>IF(TEXT(HOUR(TIMEVALUE(SchedStartTime))+1) = &quot;1&quot;,&quot;0&quot;,&quot;&quot; )+ TEXT((HOUR(TIMEVALUE(SchedStartTime))+UserTimeZone__c))
+ &quot;:&quot; + IF(
LEN(TEXT(MINUTE(TIMEVALUE(SchedStartTime)))) = 1,
&quot;0&quot; + TEXT(MINUTE(TIMEVALUE(SchedStartTime))),
TEXT(MINUTE(TIMEVALUE(SchedStartTime)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MAIL_heure_début_planifié</label>
    <type>Text</type>
</CustomField>