force-app/main/default/objects/ServiceAppointment/fields/MAIL_nom_contact__c.field-meta.xml
<CustomField>
    <fullName>MAIL_nom_contact__c</fullName>
    <formula>TEXT(Contact.Salutation) + &quot; &quot; + Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MAIL_nom_contact</label>
    <type>Text</type>
</CustomField>