force-app/main/default/objects/ServiceAppointment/fields/Mail_NomPrenomContact__c.field-meta.xml
<CustomField>
    <fullName>Mail_NomPrenomContact__c</fullName>
    <formula>Contact.FirstName +&apos; &apos; +  Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mail_NomPrenomContact</label>
    <type>Text</type>
</CustomField>