force-app/main/default/objects/ServiceAppointment/fields/MAIL_Numero_foyer__c.field-meta.xml
<CustomField>
    <fullName>MAIL_Numero_foyer__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MAIL_Numéro_foyer</label>
    <type>Text</type>
</CustomField>