force-app/main/default/objects/ServiceAppointment/fields/MAIL_support__c.field-meta.xml
<CustomField>
    <fullName>MAIL_support__c</fullName>
    <formula>Contact.Mail_support__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MAIL_support</label>
    <type>Text</type>
</CustomField>