force-app/main/default/objects/ServiceAppointment/fields/Motif_d_annulation__c.field-meta.xml
<CustomField>
    <fullName>Motif_d_annulation__c</fullName>
    <label>Motif d&apos;annulation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annulation Panéliste</fullName>
            </value>
            <value>
                <fullName>Annulation Ambassadeur</fullName>
            </value>
            <value>
                <fullName>Annulation Technicien Externe</fullName>
            </value>
            <value>
                <fullName>Annulation problème résolu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>