force-app/main/default/objects/ServiceAppointment/fields/Nom_audimetre__c.field-meta.xml
<CustomField>
    <fullName>Nom_audimetre__c</fullName>
    <formula>Intervention__r.Asset.Type_d_audimetre__c + &apos; &apos; + Intervention__r.Asset.Audimetre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom audimètre</label>
    <type>Text</type>
</CustomField>