force-app/main/default/objects/ServiceAppointment/fields/Numero_de_la_station__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_la_station__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>N° de la Station</label>
    <length>255</length>
    <type>Text</type>
</CustomField>