force-app/main/default/objects/ServiceAppointment/fields/Numero_du_foyer__c.field-meta.xml
<CustomField>
    <fullName>Numero_du_foyer__c</fullName>
    <formula>Account.Name</formula>
    <label>Numéro du foyer</label>
    <type>Text</type>
</CustomField>