force-app/main/default/objects/ServiceAppointment/fields/Numero_Foyer_Pan__c.field-meta.xml
<CustomField>
    <fullName>Numero_Foyer_Pan__c</fullName>
    <formula>Foyer_paneliste__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero Foyer Pan</label>
    <type>Text</type>
</CustomField>