force-app/main/default/objects/ServiceAppointment/fields/Prior_MAIL_date_debut_planifie__c.field-meta.xml
<CustomField>
    <fullName>Prior_MAIL_date_debut_planifie__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prior_MAIL_date_debut_planifie</label>
    <length>100</length>
    <type>Text</type>
</CustomField>