force-app/main/default/objects/ServiceAppointment/fields/Prior_MAIL_heure_debut_planifie_del__c.field-meta.xml
<CustomField>
    <fullName>Prior_MAIL_heure_debut_planifie_del__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prior_MAIL_heure_debut_planifie</label>
    <length>18</length>
    <type>Text</type>
</CustomField>