force-app/main/default/objects/ServiceAppointment/fields/Priorite__c.field-meta.xml
<CustomField>
    <fullName>Priorite__c</fullName>
    <formula>Text(Intervention__r.Priority)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priorité</label>
    <type>Text</type>
</CustomField>