force-app/main/default/objects/ServiceAppointment/fields/Rendez_vous_dans_en_jours__c.field-meta.xml
<CustomField>
    <fullName>Rendez_vous_dans_en_jours__c</fullName>
    <formula>DATEVALUE(SchedStartTime) - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rendez-vous dans (en jours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>