force-app/main/default/objects/ServiceAppointment/fields/Sous_type_d_intervention__c.field-meta.xml
<CustomField>
    <fullName>Sous_type_d_intervention__c</fullName>
    <description>OBSOLETE A NE PLUS UTILISER</description>
    <formula>IF( TEXT(Intervention__r.Sous_type_d_intervention__c) == &apos;1&apos;, $Label.WOR_Sous_type_d_intervention_Nouveau_foyer_etiquette,
IF( TEXT(Intervention__r.Sous_type_d_intervention__c) == &apos;3&apos;, $Label.WOR_Sous_type_d_intervention_Suppression_d_un_poste_etiquette,
IF( TEXT(Intervention__r.Sous_type_d_intervention__c) == &apos;4&apos;, $Label.WOR_Sous_type_d_intervention_Changement_etiquette,
IF( TEXT(Intervention__r.Sous_type_d_intervention__c) == &apos;5&apos;, $Label.WOR_Sous_type_d_intervention_Controle_de_l_installation_etiquette,
IF( TEXT(Intervention__r.Sous_type_d_intervention__c) == &apos;6&apos;, $Label.WOR_Sous_type_d_intervention_Demenagement_etiquette,
IF( TEXT(Intervention__r.Sous_type_d_intervention__c) == &apos;7&apos;, $Label.WOR_Sous_type_d_intervention_Reinstallation_etiquette,
IF( TEXT(Intervention__r.Sous_type_d_intervention__c) == &apos;8&apos;, $Label.WOR_Sous_type_d_intervention_Definitive_etiquette,
IF( TEXT(Intervention__r.Sous_type_d_intervention__c) == &apos;10&apos;, $Label.WOR_Sous_type_d_intervention_Verification_Initialisation_etiquette,
IF( TEXT(Intervention__r.Sous_type_d_intervention__c) == &apos;11&apos;, $Label.WOR_Sous_type_d_intervention_Verification_des_elements_etiquette,
IF( TEXT(Intervention__r.Sous_type_d_intervention__c) == &apos;12&apos;, $Label.WOR_Sous_type_d_intervention_Controle_de_connexion_etiquette,
IF( TEXT(Intervention__r.Sous_type_d_intervention__c) == &apos;16&apos;, $Label.WOR_Sous_type_d_intervention_Controle_d_audience_etiquette,
IF( TEXT(Intervention__r.Sous_type_d_intervention__c) == &apos;18&apos;, $Label.WOR_Sous_type_d_intervention_Recensement_etiquette,
IF( TEXT(Intervention__r.Sous_type_d_intervention__c) == &apos;19&apos;, $Label.WOR_Sous_type_d_intervention_Mutation_audimetre_etiquette,
IF( TEXT(Intervention__r.Sous_type_d_intervention__c) == &apos;21&apos;, $Label.WOR_Sous_type_d_intervention_Ajout_equipement_etiquette,
IF( TEXT(Intervention__r.Sous_type_d_intervention__c) == &apos;22&apos;, $Label.WOR_Sous_type_d_intervention_Visite_de_courtoisie_etiquette,
IF( TEXT(Intervention__r.Sous_type_d_intervention__c) == &apos;23&apos;, $Label.WOR_Sous_type_d_intervention_Passage_improviste_etiquette, &apos;&apos;
))))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sous-type d&apos;intervention</label>
    <type>Text</type>
</CustomField>