force-app/main/default/objects/ServiceAppointment/fields/tech_schedualdate__c.field-meta.xml
<CustomField>
    <fullName>tech_schedualdate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>tech_schedualdate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>