force-app/main/default/objects/ServiceAppointment/fields/Tech_StatutSA__c.field-meta.xml
<CustomField>
    <fullName>Tech_StatutSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_StatutSA</label>
    <type>Checkbox</type>
</CustomField>