force-app/main/default/objects/ServiceAppointment/fields/Temps_additionnel__c.field-meta.xml
<CustomField>
    <fullName>Temps_additionnel__c</fullName>
    <label>Temps additionnel (en min)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>