force-app/main/default/objects/ServiceAppointment/fields/Trafic_Additionnel__c.field-meta.xml
<CustomField>
    <fullName>Trafic_Additionnel__c</fullName>
    <label>Trafic Additionnel (En min)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>