force-app/main/default/objects/ServiceAppointment/fields/Type_d_intervention__c.field-meta.xml
<CustomField>
    <fullName>Type_d_intervention__c</fullName>
    <formula>IF( TEXT(Intervention__r.Type_de_l_intervention__c) == $Label.WOR_Type_d_intervention_Installation, $Label.WOR_Type_d_intervention_Installation_etiquette,
IF( TEXT(Intervention__r.Type_de_l_intervention__c) == $Label.WOR_Type_d_intervention_Desinstallation, $Label.WOR_Type_d_intervention_Desinstallation_etiquette,
IF( TEXT(Intervention__r.Type_de_l_intervention__c) == $Label.WOR_Type_d_intervention_Depannage_support, $Label.WOR_Type_d_intervention_Depannage_support_etiquette, &apos;&apos;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type d&apos;intervention</label>
    <type>Text</type>
</CustomField>