force-app/main/default/objects/ServiceAppointment/validationRules/RV01_motif_annulation_requis.validationRule-meta.xml
<ValidationRule>
    <fullName>RV01_motif_annulation_requis</fullName>
    <active>true</active>
    <description>Règle qui oblige à renseigner le motif d&apos;annulation si le rendez-vous est au statut &quot;Annulé&quot;</description>
    <errorConditionFormula>AND(
				!$User.Bypass_validation_rules__c,
				TEXT(Status) = $Label.RDV_Statut_Annule,
				ISBLANK(TEXT(Motif_d_annulation__c))
)</errorConditionFormula>
    <errorDisplayField>Motif_d_annulation__c</errorDisplayField>
    <errorMessage>Il faut renseigner le motif d&apos;annulation lors de l&apos;annulation d&apos;un rendez-vous</errorMessage>
</ValidationRule>