force-app/main/default/objects/ServiceAppointment/validationRules/RV02_DateDebutInferieure.validationRule-meta.xml
<ValidationRule>
    <fullName>RV02_DateDebutInferieure</fullName>
    <active>true</active>
    <errorConditionFormula>AND(! $User.Bypass_validation_rules__c ,
				! $User.Bypass_RDD__c,
OR (ISNEW(),ISCHANGED( SchedStartTime)),
 DATEVALUE(SchedStartTime  ) &lt;  TODAY()
				
				
)</errorConditionFormula>
    <errorMessage>La date de début planifiée doit être postérieure ou égale à la date du jour</errorMessage>
</ValidationRule>