force-app/main/default/objects/ServiceAppointment/validationRules/RV03_StatutEncours.validationRule-meta.xml
<ValidationRule>
    <fullName>RV03_StatutEncours</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$User.Bypass_validation_rules__c,ISCHANGED( Status ),TEXT(Status)==$Label.RDV_Statut_En_cours , DATEVALUE(SchedStartTime ) != TODAY())</errorConditionFormula>
    <errorMessage>Impossible de modifier le statut d’un rdv avec une date de début postérieure à la date du jour</errorMessage>
</ValidationRule>