force-app/main/default/objects/ServiceAppointment/listViews/All_ServiceAppointments.listView-meta.xml
<ListView>
    <fullName>All_ServiceAppointments</fullName>
    <columns>Priorite__c</columns>
    <columns>Account</columns>
    <columns>Numero_de_la_station__c</columns>
    <columns>ZIP</columns>
    <columns>CITY</columns>
    <columns>Type_d_intervention__c</columns>
    <columns>Sous_type_d_intervention__c</columns>
    <columns>EarliestStartTime</columns>
    <columns>LatestEndTime</columns>
    <columns>Status</columns>
    <columns>Name</columns>
    <columns>SchedStartTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Owner</field>
        <operation>equals</operation>
        <value>Fabien SANCHEZ</value>
    </filters>
    <label>Tous les rendez-vous de service</label>
</ListView>