force-app/main/default/objects/ServiceAppointment/listViews/Rendez_vous_a_echeance_dans_le_passe.listView-meta.xml
<ListView>
    <fullName>Rendez_vous_a_echeance_dans_le_passe</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Type_de_panel__c</columns>
    <columns>LatestEndTime</columns>
    <columns>SchedStartTime</columns>
    <columns>SchedEndTime</columns>
    <columns>Status</columns>
    <columns>EstDuration</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LatestEndTime</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Rendez-vous à échéance dans le passé</label>
</ListView>