force-app/main/default/objects/ServiceAppointment/listViews/Rendez_vous_dispatches.listView-meta.xml
<ListView>
    <fullName>Rendez_vous_dispatches</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>LatestEndTime</columns>
    <columns>SchedStartTime</columns>
    <columns>SchedEndTime</columns>
    <columns>Status</columns>
    <columns>EstDuration</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Dispatché</value>
    </filters>
    <filters>
        <field>SchedStartTime</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Rendez-vous dispatchés</label>
</ListView>